# vinter

./: .gitmodules  Cargo.toml  LICENSE  README.md  build-panda.sh  build-vinter.sh
artifact-evaluation/: README.md  walkthrough_bugs.md  walkthrough_completeness.md  walkthrough_heuristic-effectiveness.md  walkthrough_performance-benchmarks.md
artifact-evaluation/vm/: create-vinter-vm.sh  install-vinter.sh
fs-testing/fs-dump/: Cargo.toml
fs-testing/initramfs/: .gitignore  Makefile  copy-binary.sh  create-initramfs.sh  init
fs-testing/linux/: .gitignore  build-kernel.sh  mainline.config  nova.config  pmfs.config  zilpmem.config
fs-testing/scripts/: run_getting-started.sh  script_aggregate-benchmarks.sh  script_aggregate-results.sh  script_perf-benchmark_without-tracing_nova-hello-world.sh  script_reproduce-nova-bug.sh  script_run-paper-benchmark.sh  script_run-parallel-all.sh  test_append.yaml  test_atime.yaml  test_chmod.yaml  test_chown.yaml  test_ctime-mtime.yaml  test_hello-world.yaml  test_link-hard.yaml  test_link-sym.yaml  test_mkdir-rmdir.yaml  test_rename-dir.yaml  test_rename-long-name.yaml  (+11 more)
vinter_python/: .gitignore  build_hypercall.sh  hypercall.c  panda_helpers.py  pmem.py  pmemtrace.py  report-results.py  trace-and-analyze.sh  trace.py  trace2img.py  utils.py
vinter_rust/vinter_trace/: Cargo.toml  vinter_trace.py
vinter_rust/vinter_trace/src/: disasm.rs  lib.rs
vinter_rust/vinter_trace2img/: Cargo.toml
vinter_rust/vinter_trace2img/benches/: image.rs
vinter_rust/vinter_trace2img/src/: config.rs  image.rs  lib.rs  main.rs  pmem.rs  set.rs
(+13 files in other folders)
