[package]
name = "vinter_trace2img"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "image"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
vinter_common = { path = "../vinter_common" }
anyhow = "1.0"
fastrand = "1.7"
itertools = "0.10.3"
bitvec = "1.0.0"
blake3 = "1.3"
memmap2 = "0.5.3"
tempfile = "3.3.0"
clap = { version = "3.1.3", features = ["derive"] }
libc = "0.2.119"
linux-raw-sys = { version = "0.0.42", default-features = false, features = ["ioctl"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"                                
